<?xml version="1.0"?>
<package>
  <name>core_jelly</name>
  <version>0.0.0</version>
  <description>The core_jelly metapackage contains all the basic software for running and using a Jelly robot</description>

  <maintainer email="trbrashears@berkeley.edu">Travis Brashears</maintainer>

  <license>BSD</license>

  <author email="trbrashears@berkeley.edu">Travis Brashears</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
